--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -41,7 +41,7 @@
     border-radius: 2px;
     padding: 5px;
     margin-top: 10px;
-    z-index: 999;
+    z-index: 9;
     align-self: flex-end;
     margin-right: 5%;
     @include btn-new;
